--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  http:
+  pull_to_refresh: ^2.0.0
+  firebase_messaging: ^7.0.3
+  url_launcher: ^6.0.2
+  flutter_easyloading: ^2.2.2
+  flutter_local_notifications: ^3.0.3
+  package_info: ^2.0.0
+  shared_preferences: ^0.5.12+4
+  rxdart: ^0.27.1
 
 dev_dependencies:
   flutter_test:
